# rustdeck_phonebook

./: .aider.chat.history.md  .aider.input.history  .env  .env.example  AGENTS.md  DEBUG=false  README.md  cp phonebook.db phonebook_backup.db  phonebook.db  phonebook.service  pyproject.toml  python seed_data.py  run_test.py  seed_data.py  sudo systemctl enable phonebook.service  sudo systemctl start rustdesk-phonebook  }
.claude/: settings.local.json
.opencode/command/: bug.md  changes.md  dataflow.md  gaps.md  iface.md
.serena/: project.yml
.serena/memories/: suggested_commands.md
.serena/memories/project_info/: commands.md  conventions.md  duplication_analysis.md  purpose.md  structure.md  structure_detailed.md  (+1 more)
Implemented Plans/: Bug Fix Proposals 1.md
LocalLLMCodePrompts/: Architecture Plan.md  Debugging.md  Implementation Planning Prompt.md  InitialPrompt.md  PromptUpdates.md  aidercommands.md
architecture/: DATA_FLOW.md  INTERFACES.md  architecture.md  callgraph.md  callgraph.mermaid  subsystems.mermaid  xref_index.md
architecture/.archgen_state/: hashes.tsv
architecture/.pass2_context/: architecture.ctx.txt
bug_reports/: SUMMARY.md
seed/: seed_data.py
src/phonebook/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
src/phonebook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_gaps/: GAP_REPORT.md
tests/: conftest.py  test_app_js.py  test_config.py  test_crud.py  test_crud_missing.py  test_database.py  test_main.py  test_routes_computers.py  test_routes_export.py  test_static_css.py
(+65 files in other folders)
